syntax = "proto3";

package domain.link_cqrs.v1;

option go_package = "github.com/shortlink-org/shortlink/internal/services/link/domain/link_cqrs/v1";

import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";

message LinkView {
  google.protobuf.FieldMask field_mask = 9;

  // URL
  string url = 1;
  // Hash by URL + salt
  string hash = 2;
  // Describe of link
  string describe = 3;

  // Metadata
  string image_url = 4;
    string meta_description = 5;
    string meta_keywords = 6;

    // Create at
    google.protobuf.Timestamp created_at = 7;
    // Update at
    google.protobuf.Timestamp updated_at = 8;
}

message LinksView {
    repeated LinkView links = 1;
}
